Fixing button alignment

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,4 +18,8 @@ h1, h2, h3, body, button {
 /* Change the default button color to a nice reddish orange */
 .button.button-energized {
   background-color: #F34F20;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
 }
